Issue #17276: wesite not wrappable property now it is causing horizontal scrolling

--- a/src/site/resources/css/site.css
+++ b/src/site/resources/css/site.css
@@ -401,3 +401,42 @@ span.wrapper.inline {
     font-style: italic;
   }
 }
+
+section#Properties .wrapper {
+  overflow-x: auto;
+}
+
+@media (min-width: 800px) {
+  section#Properties .wrapper table {
+    table-layout: fixed;
+    width: 100%;
+  }
+  section#Properties .wrapper table th:nth-child(-n+4),
+  section#Properties .wrapper table td:nth-child(-n+4) {
+    width: 22.5%;
+  }
+  section#Properties .wrapper table th:nth-child(5),
+  section#Properties .wrapper table td:nth-child(5) {
+    width: 10%;
+  }
+}
+
+@media (max-width: 799px) {
+  section#Properties .wrapper {
+    overflow-x: hidden;
+  }
+
+  section#Properties .wrapper table {
+    table-layout: auto;
+    width: 100%;
+  }
+}
+
+section#Properties .wrapper table td,
+section#Properties .wrapper table td pre,
+section#Properties .wrapper table td code,
+section#Properties .wrapper table td a {
+  white-space: normal;
+  word-break: break-word;
+  overflow-wrap: break-word;
+}
